renamed:    src/app/Service/accommodation.service.spec.ts -> src/app/Service/AccommodationsService/accommodation.service.spec.ts 	renamed:    src/app/Service/accommodation.service.ts -> src/app/Service/AccommodationsService/accommodation.service.ts 	modified:   src/app/Service/ImageUploadService/image-upload-component/image-upload-component.component.ts 	renamed:    src/app/search.service.spec.ts -> src/app/Service/SearchService/search.service.spec.ts 	renamed:    src/app/search.service.ts -> src/app/Service/SearchService/search.service.ts 	new file:   src/app/Service/authServie/AuthInterceptor.ts 	renamed:    src/app/auth.service.spec.ts -> src/app/Service/authServie/auth.service.spec.ts 	renamed:    src/app/auth.service.ts -> src/app/Service/authServie/auth.service.ts 	new file:   src/app/Service/sveMetode/sve-metode.service.spec.ts 	new file:   src/app/Service/sveMetode/sve-metode.service.ts 	modified:   src/app/accommodation/accommodation.component.css 	modified:   src/app/accommodation/accommodation.component.html 	modified:   src/app/accommodation/accommodation.component.ts 	modified:   src/app/accommodation/add-accommodation/add-accommodation.component.html 	modified:   src/app/accommodation/add-accommodation/add-accommodation.component.ts 	modified:   src/app/accommodations/accommodation-edit/accommodation-edit.component.css 	modified:   src/app/accommodations/accommodation-edit/accommodation-edit.component.html 	modified:   src/app/accommodations/accommodation-edit/accommodation-edit.component.ts 	modified:   src/app/accommodations/accommodations.component.css 	modified:   src/app/accommodations/accommodations.component.html 	modified:   src/app/accommodations/accommodations.component.ts 	modified:   src/app/accommodations/confirmation-dialog/confirmation-dialog.component.html 	modified:   src/app/accommodations/confirmation-dialog/confirmation-dialog.component.ts 	modified:   src/app/admin-panel/admin-panel.component.css 	modified:   src/app/admin-panel/ad

--- a/src/app/accommodation/accommodation.component.css
+++ b/src/app/accommodation/accommodation.component.css
@@ -78,6 +78,27 @@
     align-items: center;
   }
 
+  .button {
+    background-color: #0056b3;
+    background: linear-gradient(88.31deg,#2179d8 13.82%,#4a9df7 86.7%);
+    box-shadow: 0 4px 8px rgba(255,0,0,.18);
+    color: #fff;
+    width: 32%;
+    text-transform: capitalize;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: .75px;
+    text-align: center;
+    border-radius: 28px;
+    letter-spacing: .0892857143em;
+    justify-content: center;
+    align-items: center;
+    position: center;
+     margin-left: 33%;
+  }
 
 
 
@@ -85,9 +106,7 @@
 
 
 
-
-  .photos-grid {
-    display: flex;
+  .photos-grid { 
     flex-wrap: wrap;
     gap: 10px;
   }
