--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,10 +1,11 @@
 <app-navbar-home></app-navbar-home>
 
 <div class="countries-container">
-    <div *ngFor="let country of countries" class="country-card">
-      <img [src]="country.imageUrl" alt="{{ country.name }}">
+    <div *ngFor="let country of countries" class="country-card"  [routerLink]="['/drzava']" [queryParams]="{id: country.id}">
+      <img *ngIf="isAdmin()" [src]="vratiSlike(country.imageUrl)" alt="{{ country.name }}">
       <p>{{ country.name }}</p>
-      <button (click)="goToDetails(country)">Detaljno</button>
+      
+      <button (click)="goToDetails(country.id)">Detaljno</button>
     </div>
   </div>
   
