--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
         <h4>Turistička Agencija XYZ</h4>
         <p>Adresa: Ulica Broj, Grad, Država</p>
         <p>Telefon: +381 12 345 6789</p>
-        <p>Email: kontakt@agencijaxyz.com</p>
+        <p>Email: kontakt@gmaill.com</p>
       </div>
       <div class="footer-map"> 
       </div>
