--- a/src/app/accommodations/accommodation-edit/accommodation-edit.component.css
+++ b/src/app/accommodations/accommodation-edit/accommodation-edit.component.css
@@ -1,51 +1,63 @@
-.form-group {
-    margin-bottom: 19px;
-}
+ 
+ 
+.img-responsive {
+    max-width: 20%; /* ensures the image is never wider than its container */
+    height: auto; /* maintains the aspect ratio */
+    display: auto; /* prevents inline spacing issues */
+    margin: 0 auto 10px; /* centers the image and adds space below */
+  }
+  
+  .photo-container img {
+    max-width: 30%; /* adjust this value to fit your design */
+    height: auto; /* maintains the aspect ratio */
+    display: block; /* ensures the image does not have inline properties */
+    margin-bottom: 10px; /* adds space below each image */
+  }
+  
+  .form-group{
 
-label {
+    background-color: #f8f9fa;
+    color: rgb(0, 0, 0);
+    padding: 20px;
+    margin: 0;
+  }
+
+  @media (min-width: 968px) {
+    .form-control {
+      display: block;
+      width: fit-content;
+      height: calc(1.5em + .75rem + 2px);
+      padding: .375rem .75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #495057;
+      background-color: #ece9e9;
+      background-clip: padding-box;
+      border: 1px solid #bcd1e6;
+      border-radius: .25rem;
+      transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  }
+  }
+  @media (max-width: 968px) {
+  .form-control {
     display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="number"],
-select,
-textarea {
     width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; /* Makes sure the padding does not affect the width */
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #ece9e9;
+    background-clip: padding-box;
+    border: 1px solid #bcd1e6;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
-
-button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-.photo-thumbnail {
-    width: 100px;
-    height: 100px;
-    margin-right: 5px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-}
-
-.photo-container {
-    margin-top: 20px;
-}
-
-.photo-container h3 {
-    margin-bottom: 15px;
+  }
+.btn-danger {
+  color: #fff;
+  background-color: #c51f1f;
+  border-color: #f1f1f1;
 }
