--- a/src/app/accommodations/accommodation-edit/accommodation-edit.component.html
+++ b/src/app/accommodations/accommodation-edit/accommodation-edit.component.html
@@ -1,9 +1,12 @@
 <app-navbar-home></app-navbar-home>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 
 <form #editForm="ngForm" (ngSubmit)="submitUpdate()">
   <div class="form-group">
-    <label for="city_id">City:  {{ accommodation.city.name }}</label> 
-      </div>
+    <label for="city_id">City: {{ accommodation.city?.name }}</label>
+  </div>
   <div class="form-group">
     <label for="name">Name:</label>
     <input type="text" id="name" [(ngModel)]="accommodation.name" name="name" class="form-control" required>
@@ -20,8 +23,16 @@
     </select>
   </div>
   <div class="form-group">
-    <label for="imageUrl">Image URL:</label>
-    <input type="text" id="imageUrl" [(ngModel)]="accommodation.imageUrl" name="imageUrl" class="form-control">
+    <label for="image">Main Image:</label>
+    <input type="file" id="image" (change)="onMainImageSelected($event)" accept="image/*" class="form-control">
+    <img *ngIf="accommodation.imageUrl" [src]="vratiSlike(accommodation.imageUrl)" class="img-fluid" alt="Main Image">
+    <button *ngIf="isAdmin" type="button" class="btn btn-danger" (click)="clearImage(1)">Delete Main Image</button>
+  </div>
+  <div class="form-group">
+    <label for="priceListImage">Price List Image:</label>
+    <input type="file" id="priceListImage" (change)="onPriceListImageSelected($event)" accept="image/*" class="form-control">
+    <img *ngIf="accommodation.priceListImageUrl" [src]="vratiSlike(accommodation.priceListImageUrl)" class="img-fluid">
+    <button *ngIf="isAdmin" type="button" class="btn btn-danger" (click)="clearImage(2)">Delete Price List Image</button>
   </div>
   <div class="form-group">
     <label for="priceFrom">Price From:</label>
@@ -39,13 +50,17 @@
     </select>
   </div>
   <div class="form-group">
-    <label for="priceListImageUrl">Price List Image URL:</label>
-    <input type="text" id="priceListImageUrl" [(ngModel)]="accommodation.priceListImageUrl" name="priceListImageUrl" class="form-control">
+    <label for="additionalImages">Additional Images:</label>
+    <input type="file" id="additionalImages" (change)="selectViseSlika($event)" accept="image/*" multiple class="form-control">
+    <div class="images-container">
+    <div *ngFor="let photo of accommodation.photos; let i = index" class="photo-container">
+      <img [src]="vratiSlike(photo)" alt="Photo {{ i + 1 }}" class="img-fluid">
+      <button *ngIf="isAdmin" type="button"  class="btn btn-danger btn-delete" (click)="deletePhoto(photo)">Delete</button>
+    </div></div>
   </div>
   <div class="form-group">
     <label for="notIncluded">Not Included:</label>
     <textarea id="notIncluded" [(ngModel)]="accommodation.notIncluded" name="notIncluded" class="form-control"></textarea>
   </div>
-   
   <button type="submit" class="btn btn-primary" [disabled]="!editForm.valid">Update</button>
 </form>
