--- a/src/app/cities/cities.component.css
+++ b/src/app/cities/cities.component.css
@@ -2,7 +2,7 @@
     max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #bdbcbc;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     background-color: #e6f2ff;
@@ -42,6 +42,7 @@
     box-shadow: 0 4px 8px rgba(255, 0, 0, .18);
     color: #fff;
     padding: 10px 20px;
+    margin: 5px;
     text-transform: capitalize;
     font-family: Poppins;
     font-size: 16px;
