--- a/src/app/featured-offers-component/featured-offers-component.component.css
+++ b/src/app/featured-offers-component/featured-offers-component.component.css
@@ -19,7 +19,7 @@
   .offer-card img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: cover; 
   }
   
   .offer-info {
@@ -49,6 +49,20 @@
     .offer-card {
         width: 40%;
         
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .offer-card  {
+      flex-direction: column;
+      align-items: flex-start;  
+      margin-bottom: 20px;
+      align-self: flex-end;  
+      margin-top: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+      width: 30%; 
+
     }
   }
   
