--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,10 @@
+
+<div class="centar">
 <app-navbar-home></app-navbar-home> 
+<div class="rez">
 <app-search-bar (onSearch)="searchResultsComponent.search($event)"></app-search-bar>
 <app-results #searchResultsComponent></app-results>
-
+</div>
 <app-home-gallery></app-home-gallery>
 
 <div class="intro-section">
@@ -17,3 +20,4 @@
   
   <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46689.271033929406!2d21.907102487523435!3d42.99766178772127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475582b263712f39%3A0xd1b3351095c80638!2sLeskovac!5e0!3m2!1sen!2srs!4v1709509001267!5m2!1sen!2srs" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <app-footer></app-footer>
+</div>
