dodat swagger i poboljsana admin strana ostalo je samo ulepsavajne i deo sa rezervacijom

--- a/src/app/accommodation/accommodation.component.css
+++ b/src/app/accommodation/accommodation.component.css
@@ -106,7 +106,8 @@
 
 
 
-  .photos-grid { 
+  .photos-grid {
+    display: flex;
     flex-wrap: wrap;
     gap: 10px;
   }
@@ -140,7 +141,7 @@
   }
   
   
-  .modal-content {
+  .modal-content { 
     margin: auto;
     display: block;
     width: 80%;
@@ -168,7 +169,6 @@
     padding: 10px 0;
     height: 150px;
   }
-  /* Stilovi za strelice */
 .prev, .next {
     cursor: pointer;
     position: absolute;
