--- a/src/app/accommodations/accommodations.component.css
+++ b/src/app/accommodations/accommodations.component.css
@@ -75,7 +75,7 @@
 .dodaj{
   position: relative;
   width: 100%;
-  max-width: 600px; /* Max širina trake */
+  max-width: 600px;  
   height: auto;
   border-radius: 8px;
   overflow: hidden;
@@ -102,7 +102,7 @@
 .city-card {
   position: relative;
   width: 100%;
-  max-width: 600px; /* Max širina trake */
+  max-width: 600px;  
   height: auto;
   border-radius: 8px;
   overflow: hidden;
@@ -113,12 +113,12 @@
 .city-card img {
   width: 100%;
   height: auto;
-  border-bottom: 1px solid #ccc; /* Dodato za razdvajanje slike i teksta */
+  border-bottom: 1px solid #ccc;  
 }
 
 .city-card h2 {
   position: absolute;
-  bottom: 5.499rem; /* Pomereno gore kako bi bilo iznad opisa */
+  bottom: 5.499rem;  
   left: 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -131,6 +131,6 @@
 .city-card p {
   color: #333;
   text-align: center;
-  padding: 1rem; /* Dodato više prostora za tekst */
-  background-color: #f9f9f9; /* Blago siva pozadina za bolju čitljivost */
+  padding: 1rem;  
+  background-color: #f9f9f9;  
 }
