--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,52 +1,76 @@
 <app-navbar-home></app-navbar-home>
 <div class="dashboard">
-  <form #userForm="ngForm" (ngSubmit)="updateUserInfo()">
-    <div class="form-group">
-      <label for="username">Novo korisničko ime:</label>
-      <input type="text" id="username" class="form-control" [(ngModel)]="user.username" name="username" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Nova lozinka:</label>
-      <input type="password" id="password" class="form-control" [(ngModel)]="user.password" name="password" required>
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">Potvrdi lozinku:</label>
-      <input type="password" id="confirmPassword" class="form-control" [(ngModel)]="confirmPassword" name="confirmPassword" required>
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid || user.password !== confirmPassword">Ažuriraj</button>
-  </form>
-  
-  <div class="featured-offers">
-    <h2>Istaknuti Oglasi</h2>
-    <div *ngFor="let offer of featuredOffers" class="offer-card">
-      <img [src]="'http://localhost:8080/images/'+offer.imageUrl" alt="{{ offer.name }}">
+  <div class="card-container">
+    <div class="card" (click)="setActiveSection('password-change')">Promena lozinke</div>
+    <div class="card" (click)="setActiveSection('featured-accommodations')">Istaknuti smeštaj</div>
+    <div class="card" (click)="setActiveSection('statistics')">Statistika</div>
+    <div class="card" (click)="setActiveSection('actuator')">Actuator</div>
+    <div class="card" (click)="setActiveSection('swagger')">Swagger Dokumentacija</div>
+  </div>
 
-      <div>
-        <h3>{{ offer.title }}</h3>
-        <p>{{ offer.description }}</p>
-        <button (click)="goToDetails(offer.id)">Detaljno</button>
+  <div *ngIf="activeSection === 'password-change'">
+    <form #userForm="ngForm" (ngSubmit)="updateUserInfo()">
+      <div class="form-group">
+        <label for="username">Novo korisničko ime:</label>
+        <input type="text" id="username" class="form-control" [(ngModel)]="user.username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Nova lozinka:</label>
+        <input type="password" id="password" class="form-control" [(ngModel)]="user.password" name="password" required>
+      </div>
+      <div class="form-group">
+        <label for="confirmPassword">Potvrdi lozinku:</label>
+        <input type="password" id="confirmPassword" class="form-control" [(ngModel)]="confirmPassword" name="confirmPassword" required>
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid || user.password !== confirmPassword">Ažuriraj</button>
+    </form>
+  </div>
+
+  <div *ngIf="activeSection === 'featured-accommodations'">
+    <div class="featured-offers">
+      <h2>Istaknuti Oglasi</h2>
+      <div *ngFor="let offer of featuredOffers" class="offer-card">
+        <img [src]="'http://localhost:8080/images/'+offer.imageUrl" alt="{{ offer.name }}">
+        <div class="offer-info">
+          <h3>{{ offer.title }}</h3>
+          <p>{{ offer.description }}</p>
+          <button (click)="goToDetails(offer.id)" class="btn btn-primary">Detaljno</button>
+        </div>
       </div>
     </div>
   </div>
-  <div class="statistics-panel">
-    <div class="stat-card" *ngFor="let stat of statistics">
-      <h4>{{ stat.title }}</h4>
-      <p>{{ stat.value }}</p>
-    </div>
-  </div>
-  <div class="actuator-panel">
-    <div class="actuator-card">
-      <h4>System Health</h4>
-      <pre>{{ actuatorHealth | json }}</pre>
-    </div>
-    <div class="actuator-card">
-      <h4>Application Info</h4>
-      <pre>{{ actuatorInfo | json }}</pre>
-    </div>
-    <div class="actuator-card">
-      <h4>Beans Info</h4>
-      <pre>{{ actuatorBeans | json }}</pre>
+
+  <div *ngIf="activeSection === 'statistics'">
+    <div class="statistics-panel">
+      <h2>Statistika</h2>
+      <div class="stat-card" *ngFor="let stat of statistics">
+        <h4>{{ stat.title }}</h4>
+        <p>{{ stat.value }}</p>
+      </div>
     </div>
   </div>
 
+  <div *ngIf="activeSection === 'actuator'">
+    <div class="actuator-panel">
+      <h2>Actuator</h2>
+      <div class="actuator-card">
+        <h4>System Health</h4>
+        <pre>{{ actuatorHealth | json }}</pre>
+      </div>
+      <div class="actuator-card">
+        <h4>Application Info</h4>
+        <pre>{{ actuatorInfo | json }}</pre>
+      </div>
+      <div class="actuator-card">
+        <h4>Beans Info</h4>
+        <pre>{{ actuatorBeans | json }}</pre>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="activeSection === 'swagger'">
+    <div class="swagger-panel">
+      <button (click)="goToSwagger()" class="btn btn-primary">Swagger Dokumentacija</button>
+    </div>
+  </div>
 </div>
