--- a/src/app/admin-panel/admin-panel.component.css
+++ b/src/app/admin-panel/admin-panel.component.css
@@ -122,3 +122,22 @@
     cursor: pointer;
     font-size: 16px;
 }
+.alert {
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
